Refine design: flat borders, cool palette, compact dashboard

--- a/index.html
+++ b/index.html
@@ -15,13 +15,30 @@
             surface: '#121212', // Slightly lighter for cards
             surfaceHighlight: '#27272a', // Zinc 800
             primary: '#e4e4e7', // Zinc 200
-            secondary: '#fb923c', // Orange-400
+            secondary: '#3b82f6', // Blue-500 (New main accent variant)
+
+            // New Harmony Palette
+            protein: '#38bdf8', // Sky-400 (Cyan-ish Blue)
+            carbs: '#818cf8',   // Indigo-400 (Purple-ish Blue)
+            fat: '#c084fc',     // Fuchsia-400 (Pink-ish Purple)
+
             accent: '#8b5cf6', // Violet-500
             danger: '#f87171', // Red-400
             success: '#34d399', // Emerald-400
             // Glass effects
             glass: 'rgba(255, 255, 255, 0.05)',
             glassBorder: 'rgba(255, 255, 255, 0.1)',
+          },
+          borderRadius: {
+            'none': '0',
+            'sm': '0',
+            DEFAULT: '0',
+            'md': '0',
+            'lg': '0',
+            'xl': '0',
+            '2xl': '0',
+            '3xl': '0',
+            // We keep 'full' for actual circles like the donut chart or pills, but override box corners
           },
           fontFamily: {
             sans: ['Inter', 'sans-serif'],
