--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       theme: {
         extend: {
           colors: {
-            background: '#f8fafc', // Slate 50 (Soft Off-White)
+            background: '#ffffff', // White
             surface: 'rgba(255, 255, 255, 0.65)', // White Glass
             surfaceHighlight: 'rgba(255, 255, 255, 0.9)', // Stronger white for hover
             primary: '#cbd5e1', // Slate 300 (Subtle borders/dividers)
@@ -69,8 +69,8 @@
   </script>
   <style>
     body {
-      background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);
-      /* Airy light blue gradient */
+      background: #ffffff;
+      /* White */
       min-height: 100vh;
       color: #1e293b;
       /* Slate 800 */
