--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       theme: {
         extend: {
           colors: {
-            background: '#ffffff', // White
+            background: '#F5F5F7', // Apple Gray
             surface: 'rgba(255, 255, 255, 0.65)', // White Glass
             surfaceHighlight: 'rgba(255, 255, 255, 0.9)', // Stronger white for hover
             primary: '#cbd5e1', // Slate 300 (Subtle borders/dividers)
@@ -69,8 +69,8 @@
   </script>
   <style>
     body {
-      background: #ffffff;
-      /* White */
+      background: #F5F5F7;
+      /* Apple Gray */
       min-height: 100vh;
       color: #1e293b;
       /* Slate 800 */
