Update palette to monochromatic Stone/Warm Gray

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             textMain: '#1e293b', // Slate 800 (Dark Gray text)
             textSecondary: '#64748b', // Slate 500 (Medium Gray)
 
-            // New Harmony Palette - PASTEL / SOFT
-            secondary: '#60a5fa', // Blue-400 (Soft Blue)
-            protein: '#7dd3fc', // Sky-300 (Airy Blue)
-            carbs: '#a5b4fc',   // Indigo-300 (Soft Purple)
-            fat: '#f0abfc',     // Fuchsia-300 (Soft Pink)
+            // New Harmony Palette - PASTEL / SOFT (Earth/Stone)
+            secondary: '#a8a29e', // Stone-400
+            protein: '#d6d3d1', // Stone-300
+            carbs: '#a8a29e',   // Stone-400
+            fat: '#78716c',     // Stone-500
 
-            accent: '#818cf8', // Indigo-400
+            accent: '#57534e', // Stone-600
             danger: '#fca5a5', // Red-300
             success: '#86efac', // Green-300
 
