--- a/index.html
+++ b/index.html
@@ -98,6 +98,19 @@
       background: #94a3b8;
       /* Slate 400 */
     }
+
+    /* Remove Input Number Spinners */
+    /* Chrome, Safari, Edge, Opera */
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
+    /* Firefox */
+    input[type=number] {
+      -moz-appearance: textfield;
+    }
   </style>
   <script type="importmap">
 {
